# celery-aio-pool

./: .codespellrc  .commitlintrc.json  .flake8  .gitignore  .hadolint.yaml  .pre-commit-config.yaml  .prettierignore  .release-please-manifest.json  .shellcheckrc  README.md  lets.yaml  pyproject.toml  release-please-config.json  requirements-dev.txt  requirements.txt
celery_aio_pool/: __init__.py  pool.py  tracer.py  types.py
tests/: conftest.py  test_celery_pool_asyncio.py
